# rpc-in-c

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: CLANG.yml
cmake/: BuildType.cmake  CompilerWarnings.cmake  EnableTests.cmake  Sanitizers.cmake
include/: crpc.h  rpc.h  stream.h
src/: CMakeLists.txt  rpc.c
src/crpc/: _init.c  _mul_int.c  add.c  create_client.c  create_server.c  init.c  mul_int.c  release_client.c  release_server.c  start_server.c
src/internal/: crpc_internal.h  network_internal.h
src/network/: CMakeLists.txt  _release_client_context.c  stop_udp_server.c
src/network/cmake/: CompilerWarnings.cmake
src/network/include/network/: network.h
src/network/src/: CMakeLists.txt
src/network/src/internal/: network_internal.h
src/network/src/network/: _open_udp_socket.c  _release_server_context.c  _send_buffer_udp.c  _stop_udp_server.c  init_client_context.c  init_server_context.c  read_buffer_udp.c  release_client_context.c  release_server_context.c  send_buffer_udp.c  send_data_udp.c  start_udp_server.c  stub.c
src/serialization/: README.md
src/serialization/.github/workflows/: CLANG.yml
src/serialization/cmake/: BuildType.cmake  Install.cmake
src/serialization/include/: stream.h  utils.h
src/serialization/src/: stream.c
src/serialization/tests/: CMakeLists.txt  test_checkpoint.c  test_is_empty.c  test_offset_copy.c  test_ser_string.c  test_skip.c  test_stream_init.c
tests/: CMakeLists.txt  test_free.c  test_rpc.c  test_stub.c  test_udp_server_client.c
